--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "axios": "^1.10.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
-    "immer": "^10.1.1",
+    "esri-leaflet": "^3.0.18",
+    "esri-leaflet-geocoder": "^3.1.6",
+    "leaflet": "^1.9.4",
+    "leaflet-geosearch": "^4.2.0",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.60.0",
+    "react-leaflet": "^5.0.0",
     "socket.io-client": "^4.8.1",
     "uuid": "^11.1.0",
     "zod": "^3.25.76",
@@ -29,6 +33,8 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/esri-leaflet": "^3.0.3",
+    "@types/leaflet": "^1.9.20",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
