control de errores

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.60.0",
     "react-leaflet": "^5.0.0",
+    "react-virtuoso": "^4.14.1",
     "socket.io-client": "^4.8.1",
     "uuid": "^11.1.0",
     "zod": "^3.25.76",
